tests/e2e/semantics/assignment_array_index_invalid4.error
Error: syntax error in story at line 2, column 1

2|    a[0][0] = "foo"
      ^^^^^^^^^

E0100: Can't assign `string` to `int`
