tests/e2e/semantics/assignment_array_index_invalid4.story
a = [[1]]
a[0][0] = "foo"
